# knobManager

./: CMakeLists.txt  config.cpp  config.h  config.ini  config.py  main.cpp
config/: config.cpp  config.h  config.ini  config.py
module1/: Module1.h  config.h
